[gd_scene load_steps=3 format=3 uid="uid://cxam8ysk5q3yy"]

[ext_resource type="Theme" uid="uid://dq33ynkq606di" path="res://resources/themes/main_theme.tres" id="1_j1wah"]
[ext_resource type="Script" uid="uid://cpvfgu4fjmmcu" path="res://stage_button.gd" id="2_5aeu5"]

[node name="StageButton" type="Button"]
custom_minimum_size = Vector2(150, 150)
offset_right = 8.0
offset_bottom = 8.0
theme = ExtResource("1_j1wah")
script = ExtResource("2_5aeu5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="StageNumberLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 48
text = "1"
horizontal_alignment = 1

[node name="StageNameLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 12
text = "Stage Name"
horizontal_alignment = 1

[node name="RankLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 32
text = "S"
horizontal_alignment = 1

[node name="LockedIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
